Change job step progress indicator to circular

--- a/BLAZAMGui/Layouts/MainLayout.razor
+++ b/BLAZAMGui/Layouts/MainLayout.razor
@@ -74,7 +74,7 @@
                         }
                     }
                     <MudContainer Style="@topMarginForContent"
-                                  MaxWidth="MaxWidth.Large"
+                                  MaxWidth="MaxWidth.ExtraLarge"
                                   Class="pt-5 pb-10 mud-height-full">
 
 
