--- a/BLAZAMGui/UI/Outputs/Jobs/JobStepResultIcon.razor
+++ b/BLAZAMGui/UI/Outputs/Jobs/JobStepResultIcon.razor
@@ -21,21 +21,32 @@
             break;
     }
 }
-@if(Step.Result!=JobResult.Running){
-<MudIcon Color="@color"
-    Icon="@icon" />
-}
-else
-{
-    <MudStack AlignItems=AlignItems.Center Spacing="0">
-        <MudProgressLinear Indeterminate=@(Step.Progress==null) Value="@(Step.Progress.HasValue==true?Step.Progress.Value:0)" Max="100"/>
+
+<MudStack AlignItems=AlignItems.Center
+          Spacing="0">
+    @if (Step.Result != JobResult.Running)
+    {
+        <MudIcon Color="@color"
+                 Icon="@icon" />
+    }
+    else
+    {
+
+        <MudProgressCircular Size=Size.Small
+                             Color="Color.Primary"
+                             Indeterminate=@(Step.Progress==null)
+                             Value="@(Step.Progress.HasValue==true?Step.Progress.Value:0)"
+                             Max="100" />
         @if (Step.Progress != null)
         {
-            <MudText Typo="Typo.caption">@Step.Progress.Value.Round()%</MudText>
+            <MudText Class="relative"
+                     Style="top:-22px;height:0px;"
+                     Typo="Typo.caption">@Step.Progress.Value.Round()%</MudText>
         }
-    </MudStack>
-        
-}
+
+
+    }
+</MudStack>
 @code {
     [Parameter]
     public IJobStep Step { get; set; }
