--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -17,9 +17,8 @@
     </MudTooltip>
 
 
-
-@code {
-#nullable disable warnings
+    @code {
+    #nullable disable warnings
     string newPassword = "";
     string newPasswordConfirm = "";
     MudSwitch<bool>? requireChangeSwitch;
@@ -37,28 +36,39 @@
     public async void SaveChanges()
     {
         //User.CommitChanges();
-        try
+        Modal.LoadingData = true;
+        InvokeAsync(StateHasChanged);
+        await Task.Run(async() =>
+        
         {
-            if (User.SetPassword(newPassword.ToSecureString(), requireChangeSwitch.Checked))
+            try
             {
+                if (User.SetPassword(newPassword.ToSecureString(), requireChangeSwitch.Checked))
+                {
 
 
-                SnackBarService.Success("Changed password for " + User.DisplayName);
-                await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Checked);
-                Close();
+                    SnackBarService.Success("Changed password for " + User.DisplayName);
+                    await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Checked);
+                    Close();
 
+                }
+                else
+                {
+                    SnackBarService.Error("Unable to set password for " + User.DisplayName);
+
+                }
             }
-            else
+            catch (Exception ex)
             {
-                SnackBarService.Error("Unable to set password for " + User.DisplayName);
-
+                SnackBarService.Error(ex.Message + " " + ex.InnerException?.Message);
             }
-        }
-        catch (Exception ex)
-        {
-            SnackBarService.Error(ex.Message + " " + ex.InnerException?.Message);
-        }
+            
+        });
+       
+        Modal.LoadingData = false;
+        InvokeAsync(StateHasChanged);
     }
+
     bool PasswordsValid
     {
         get
