--- a/BLAZAM/Pages/Browse/ViewDirectoryEntry.razor
+++ b/BLAZAM/Pages/Browse/ViewDirectoryEntry.razor
@@ -1,3 +1,5 @@
+@inject IStringLocalizer<AppLocalization> AppLocalization
+<CascadingValue Value="ChangeHistoryModal">
 @switch (DirectoryEntry.ObjectType)
 {
     case ActiveDirectoryObjectType.User:
@@ -16,8 +18,18 @@
         <ViewPrinter DirectoryEntry="DirectoryEntry" />
         break;
 }
+</CascadingValue>
+<AppModal Title=@AppLocalization["Change History"] @ref=@ChangeHistoryModal Options=@(new DialogOptions(){FullWidth=true,MaxWidth=MaxWidth.ExtraExtraLarge})>
+    @if (ChangeHistoryModal?.IsShown == true)
+    {
+        <ChangeHistoryModalContent Model="DirectoryEntry" />
+    }
+</AppModal>
+
 
 @code {
     [Parameter]
     public IDirectoryEntryAdapter? DirectoryEntry { get; set; }
+
+    protected AppModal ChangeHistoryModal{ get; set; }
 }
