Add history modal to computer search result pages

--- a/BLAZAM/Pages/Computers/ViewComputer.razor
+++ b/BLAZAM/Pages/Computers/ViewComputer.razor
@@ -21,7 +21,8 @@
                                       OnRename="@(()=>{RenameModal?.Show();})"
                                       OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
                                       OnToggleEditMode="ToggleEditMode"
-                                      OnUnlock="@Unlock" />
+                                      OnUnlock="@Unlock"
+                                      OnShowHistory="@(()=>{ChangeHistoryModal.Show();})"/>
             <MudOverlay Visible="SavingChanges" DarkBackground="false" Absolute="true">
 
             </MudOverlay>
