Implement App news

--- a/BLAZAMGui/Layouts/MainAppBar.razor
+++ b/BLAZAMGui/Layouts/MainAppBar.razor
@@ -30,7 +30,9 @@
     }
 
     <MudSpacer />
-  
+    <AuthorizeView Roles=@(UserRoles.SuperAdmin)>
+        <ApplicationNewsProvider />
+    </AuthorizeView>
     <AppUserButton/>
   
 </MudAppBar>
