Fix for cross thread access exception

--- a/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
+++ b/BLAZAMGui/UI/Users/ChangeUserPasswordModalContent.razor
@@ -37,7 +37,7 @@
     {
         //User.CommitChanges();
         Modal.LoadingData = true;
-        InvokeAsync(StateHasChanged);
+        await InvokeAsync(StateHasChanged);
         await Task.Run(async() =>
         
         {
@@ -49,7 +49,7 @@
 
                     SnackBarService.Success("Changed password for " + User.DisplayName);
                     await AuditLogger.User.PasswordChanged(User, requireChangeSwitch.Checked);
-                    Close();
+                    await InvokeAsync(Close);
 
                 }
                 else
