Fix for memory leak in Session List view

--- a/BLAZAMGui/UI/Computers/ComputerSessions.razor
+++ b/BLAZAMGui/UI/Computers/ComputerSessions.razor
@@ -165,5 +165,8 @@ else
     {
         base.Dispose();
         t?.Dispose();
+        Sessions.ForEach(s => {
+            s.Dispose();
+        });
     }
 }
