--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -85,27 +85,35 @@
     </MudTabPanel>
     <MudTabPanel>
         <ChildContent>
-            <MudDataGrid Virtualize=true
-                         Height="600px"
-                         ColumnResizeMode="ResizeMode.Container"
-                         FixedHeader=true
-                         Hideable=true
-                         Items="@systemAuditEntries.OrderByDescending(ae=>ae.Timestamp)"
-                         Filterable="false"
-                         SortMode="@SortMode.Multiple"
-                         Groupable="false">
-                <Columns>
-                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
-                    <PropertyColumn Property="x => x.Username" />
-                    <PropertyColumn Property="x => x.IpAddress" />
-                    <PropertyColumn Property="x => x.Target" />
+            @if(ApplicationInfo.InDemoMode && CurrentUser.Username == "Demo")
+            {
+                <MudText>Disabled in demo</MudText>
+            }
+            else
+            {
+                <MudDataGrid Virtualize=true
+                             Height="600px"
+                             ColumnResizeMode="ResizeMode.Container"
+                             FixedHeader=true
+                             Hideable=true
+                             Items="@systemAuditEntries.OrderByDescending(ae=>ae.Timestamp)"
+                             Filterable="false"
+                             SortMode="@SortMode.Multiple"
+                             Groupable="false">
+                    <Columns>
+                        <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
+                        <PropertyColumn Property="x => x.Username" />
+                        <PropertyColumn Property="x => x.IpAddress" />
+                        <PropertyColumn Property="x => x.Target" />
 
-                    <PropertyColumn Property="x => x.Target" />
-                    <PropertyColumn Property="x => x.BeforeAction" />
-                    <PropertyColumn Property="x => x.AfterAction" />
+                        <PropertyColumn Property="x => x.Target" />
+                        <PropertyColumn Property="x => x.BeforeAction" />
+                        <PropertyColumn Property="x => x.AfterAction" />
 
-                </Columns>
-            </MudDataGrid>
+                    </Columns>
+                </MudDataGrid>
+            }
+         
 
 
 
