--- a/BLAZAMGui/UI/Modals/AppUserProfileModalContent.razor
+++ b/BLAZAMGui/UI/Modals/AppUserProfileModalContent.razor
@@ -24,6 +24,21 @@
                     <MudText>Change Profile Icon</MudText>
                 }
             </MudButton>
+            @if (CurrentUser.State.Preferences.ProfilePicture != null)
+            {
+                <MudButton OnClick="@(async ()=>{
+CurrentUser.State.Preferences.ProfilePicture=null;
+await CurrentUser.State.SaveUserSettings();
+})"
+                       Variant="Variant.Filled"
+                       Color="Color.Error"
+                       StartIcon="@Icons.Material.Filled.Remove"
+                      >
+                       Remove
+                       </MudButton>
+
+            }
+           
         </ButtonTemplate>
     </MudFileUpload>
     <MudTextField T="string" @bind-Text=@CurrentUser.State.Preferences.Email Label=@AppLocalization["Email"] />
